4.23: 6/XX/2011 (svn rYYYY)
	* CORE: Allow the user to be able to override the persister for the built-in types as well.

4.22: 5/19/2011 (svn r1777)
	* CORE: Fixed major problem with DAO loops and caching.  Thanks much to the user list.  Fixes bug #3301588.
	* CORE: Fixed problem with queryForMatching() and queryForFieldValues() if no fields.  Thanks to JC.  Fixes bug #3301253.
	* CORE: Fixed problem with configuring fields in base class without annotations.  Thanks to JC and Rahan.  Fixed bug #3301698.
	* CORE: Fixed problem with LazyForeignCollection.toArray(T[]).  Thanks to Skylar.  Fixes bug #3302924.
	* CORE: Added initial support for defining external DataPersister classes for persisting non-built-in types.  Thanks to Craig.
	* CORE: Removed auto-downcasing of hand wired table name in DatabaseTableConfig.  Thanks to Tomas.  Fixes bug #3302976.
	* CORE: Added the maxEagerForeignCollectionLevel field to the @ForeignCollectionField annotation to limit recursion.
	* CORE: Renamed the maxForeignLevel field in @DatabaseField to be maxForeignAutoRefreshLevel to make more sense.
	* CORE: Added support for creating an empty foreign collection field so you can use add() on it when creating.  Thanks to Craig.
	* CORE: Added the concept of closeLastIterator() to the DAO and CloseableWrappedIterable for reentrant usage.
	* CORE: Added better connection/statement testing code and fixed some additional missing closes.
	* JDBC: Tweaked the HSQLdb database type to acknowledge that it seems to support inner transactions.

4.21: 5/5/2011 (svn r1721)
	* CORE: Added maxForeignLevel=1 type of setting to @DatabaseField to limit the foreign field recursive calls.
	* CORE: Added a isOpen() to the ConnectionSource interface and implementations.
	* CORE: Fixed a problem with the foreign auto-refresh loops and the last level.  Thanks to Xavier.  Fixes bug #3296400.
	* JDBC: Fixed a _very_ bad, embarrassing problem with unclosed statements.  Thanks to MathieuLoutre.  Fixes bug #3298098.