@@ -1,5 +1,8 @@
 4.23: 6/XX/2011 (svn rYYYY)
 	* CORE: Allow the user to be able to override the persister for the built-in types as well.
+	* CORE: Added a orderColumnName field to the ForeignCollectionField to order collections based on a column.
+	* CORE: Moved the external log classes over to the JDBC package to make core a bit smaller.
+	* CORE: Added queryForSameId(), createIfNotExists(), and createOrUpdate() to DAO.
 
 4.22: 5/19/2011 (svn r1777)
 	* CORE: Fixed major problem with DAO loops and caching.  Thanks much to the user list.  Fixes bug #3301588.
